# propertyiq_getdata

./: .gitignore  AGENTS.md  CLAUDE.md  Pipfile  README.md  config.py  manage.py  pyproject.toml  requirements.txt  run_20240120.sh
.lavish/: propertyiq_abs_data_plan.html  propertyiq_refactor_split_outputs_plan.html
app/: __init__.py
app/main/: forms.py  views.py
app/templates/: _base.html
archive/: README.md
archive/etl1_pull/: auhouse_auction.py  auhouse_rent.py
archive/etl2_extract/: auhouse_rent.py
archive/etl3_transform/: auhouse_rent.py
archive/utils/: __init__.py  html_2_extract.py
archive/website/: README.md
etl1_pull/: REA.py  auhouse_auction.py  domain-auction.py  domain.py  nswgov.py  rentalbonddata.py  rentboard.py
etl2_extract/: REA.py  auhouse_auction.py  domain.py  nswgov.py
etl3_transform/: auhouse_rent.py  domain.py  nswgov.py
get_data/: run_20171231.sh  run_20180722.sh
get_data/01a codes/: 99 Scripts.txt  REA UPDATE v201712.py  REA UPDATE v201803.py  REA UPDATE v201805.py  (+9 more)
propertyiq_getdata/: __init__.py  audit.py  cli.py  diagnostics.py  nswgov.py  paths.py  rentboard.py
scraper/: run_20180304.sh  run_20180524.sh
scripts/: compare_nswgov_latest_backup.py  data_pull.sh  data_push_with_one_backup.sh  data_seed_google_drive.sh  google_drive_check.sh  update_data_and_push.sh
tests/: test_abs_pipeline.py  test_contract_outputs.py  test_diagnostics.py  test_nswgov_pipeline.py  test_rentboard_pipeline.py
utils/: __init__.py  html_1_pull.py  html_2_extract.py  pull_data.py
website/: config.py  manage.py
(+167 files in other folders)
