[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "propertyiq-getdata"
version = "0.1.0"
description = "Collection-only ETL for NSW property sales and rental bond data."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "requests",
]

# `python -m propertyiq_getdata ...` still works; this exposes the same CLI as a
# console script, so `uv run propertyiq-getdata ...` works too.
[project.scripts]
propertyiq-getdata = "propertyiq_getdata.cli:main"

# Dev-only tooling (PEP 735). Installed by default with `uv sync` / `uv run`;
# excluded from a lean runtime install via `uv sync --no-dev`.
[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["propertyiq_getdata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
